--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,31 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: ./docker/Dockerfile
+    ports:
+      - "4200:4200"
+    volumes:
+      - ./frontend:/*
     networks:
       - mynetwork
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: ./docker/Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./backend:/app
     networks:
       - mynetwork
-    environment:
-      - NODE_ENV=production
 
   nginx:
     image: nginx:alpine
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - "80:80"
+      - "955:80"
     depends_on:
       - frontend
       - backend
