--- a/nginx.conf
+++ b/nginx.conf
@@ -5,11 +5,21 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://frontend:80;
+            proxy_pass http://frontend:4200;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
         location /api {
             proxy_pass http://backend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
