--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ http {
     server {
         listen 80;
 
-        location / {
+        location /app {
             proxy_pass http://frontend:4200;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -20,6 +20,16 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+        }
+
+        location / {
+            proxy_pass http://tensorflow:8888/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            rewrite ^/jupyter/(.*)$ /$1 break;
         }
     }
 }
