--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "4200:4200"
     volumes:
-      - ./frontend:/*
+      - ./frontend:/frontend/
     networks:
       - mynetwork
 
